# OrderManager

./: .dockerignore  .editorconfig  Dockerfile  Makefile  README.md  docker-compose.yaml  pip.conf  pyproject.toml  requirements.txt
backend/contrib/: env.exemple
backend/src/: asgi.py  wsgi.py
backend/src/apps/customers/: admin.py  models.py
backend/src/apps/customers/api/: schemas.py  urls.py  views.py
backend/src/apps/customers/migrations/: 0001_initial.py  0002_partner.py  0003_alter_customer_email.py
backend/src/apps/remittances/: admin.py  apps.py  models.py
backend/src/apps/remittances/migrations/: 0001_initial.py
backend/src/apps/sales/: admin.py  apps.py  models.py
backend/src/apps/sales/migrations/: 0001_initial.py
backend/src/routes/: urls.py
backend/src/settings/: development.py
