[tool.poetry]
name = "ordermanager"
version = "0.1.0"
description = ""
authors = ["Alexius Strauss"]
license = "Boost Software License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"
django-filter = "^24.2"
gunicorn = "^22.0.0"
django-cors-headers = "^4.4.0"
python-dotenv = "^1.0.1"
black = "^24.4.2"
pylint = "^3.2.6"
ruff = "^0.5.4"
ipython = "^8.26.0"
isort = "^5.13.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytest = "^8.3.1"
behave = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
